--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+
+  "homepage": "https://frontend.1click2music.com/musicaldashboard-refactored/",
   "name": "musicaldashboard-refactored",
   "version": "0.1.0",
   "private": true,
@@ -43,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "http://PhilBrockman.github.io/musicaldashboard-refactored"
+  }
 }
