--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://frontend.1click2music.com/musicaldashboard-refactored/",
+  "homepage": "http://frontend.1click2music.com",
   "name": "musicaldashboard-refactored",
   "version": "0.1.0",
   "private": true,
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
