--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://frontend.1click2music.com",
+  "homepage": "http://frontend.1click2music.com/musicaldashboard-refactored",
   "name": "musicaldashboard-refactored",
   "version": "0.1.0",
   "private": true,
